Fix request mutation interfering with primary operation retry logic
This is a follow up to https://github.com/crate/crate/pull/17973

Primary retries can happen in two places:

- Triggered from within the primary operation (e.g. shard not found, due
  to a race where it is being moved)
- Triggered due to the replica operation failing

Both scenarios were problematic with the mutations happening on the
primary request. Items could have had their seqNo changed to
SKIP_ON_REPLICA and insertColumns/insertItems could also change, making
a retry unsafe.

To solve this, this introduces a dedicated replica request which will
only contain items actually inserted on the primary. The original
request is no longer mutated to ensure it can be reused for a retry.

As a side effect of this change, it also fixes another issue where a
statement like:

    INSERT INTO tbl (id, value) VALUES (?, ?)
    ON CONFLICT (id) DO UPDATE SET value = excluded.value

With a table that has the columns:

- id
- value
- other
- rnd_col (being undeterministic generated using something like `random()`)

This could lead to serialization errors if used in a bulk operation where
some items ran into a conflict and others did not.
The update items had insertValues for `[id, value, other, rnd_col]`, while
the non-conflict items had insertValues for `[id, value, rnd_col]`, the
third position having a mix of string/int caused the streaming errors.